# ChannelAdmin

./: .env  README.md  pyproject.toml
src/channel_admin/: __init__.py  bot.py  config.py  filtering.py  models.py  payments.py  services.py  storage.py
src/channel_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: storage.json
tests/: conftest.py  test_json_storage.py  test_payments.py  test_services.py
